rendered/envs/friclu/vault/ingress-vault.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    helm.sh/chart: vault-0.30.1
  name: vault
  namespace: vault
spec:
  ingressClassName: nginx
  rules:
    - host: frault.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - frault.duckdns.org
      secretName: vault-certificate
